--- a/.github/workflows/iblunder.yml
+++ b/.github/workflows/iblunder.yml
@@ -1,11 +1,8 @@
-name: IT IS A BLUNDER AT SIX 
+name: SPECIALQUEENBLU
 on:
   schedule:
-   
     - cron: '0 6 * * *'
   workflow_dispatch:
-  # push:  
-  #   branches: [ main ]
 
 jobs:
   update-content:
@@ -15,27 +12,26 @@ jobs:
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
-        
+        with:
+          fetch-depth: 1 # Only get the latest version (saves time/bandwidth)
+
       - name: Setup Python
         uses: actions/setup-python@v5
         with:
           python-version: '3.10'
-          
+          cache: 'pip' # Caches your requests/bs4 installs to save minutes
+
       - name: Install Dependencies
-        run: pip install requests beautifulsoup4
+        run: |
+          python -m pip install --upgrade pip
+          pip install requests beautifulsoup4
         
       - name: Run Scraper and Cleaner
         run: python bl34Gnderqqq123.py
         
       - name: Commit and Push Changes
         run: |
-          git config --global user.name "BLUNDERER"
+          git config --global user.name "Runner"
           git config --global user.email "bot@github.com"
           git add lovestory.json log.txt
-          # The following logic is to prevent empty commits if no changes
-          if git diff-index --quiet HEAD; then
-            echo "No changes to commit"
-          else
-            git commit -m "blundered - $(date +'%Y-%m-%d %H:%M:%S UTC')"
-            git push
-          fi
+          git diff --quiet && git diff --staged --quiet || (git commit -m "update - $(date +'%Y-%m-%d %H:%M:%S UTC')" && git push)
