--- a/.github/workflows/channel.yml
+++ b/.github/workflows/channel.yml
@@ -13,63 +13,66 @@ on:
 jobs:
   scan-channels:
     runs-on: ubuntu-latest
-    
+
     steps:
     - name: Checkout repository
       uses: actions/checkout@v4
-    
+
     - name: Set up Python
       uses: actions/setup-python@v5
       with:
         python-version: '3.11'
-    
+
     - name: Install dependencies
       run: |
         pip install requests
-    
+
     - name: Run sports channel scanner
       run: |
         python scan_sports_channels.py lovestory.json channels.json
-      continue-on-error: false
-    
+
     - name: Check if channels.json was created
       id: check_file
       run: |
         if [ -f channels.json ]; then
           echo "file_exists=true" >> $GITHUB_OUTPUT
           echo "✅ channels.json created successfully"
-          
-          # Show basic stats
+
           echo "📊 Scan Results:"
-          python -c "import json; data = json.load(open('channels.json')); print(f\"  - Sports channels found: {data['metadata']['sports_channels_found']}\"); print(f\"  - Playlists scanned: {data['metadata']['playlists_scanned']}\"); print(f\"  - Duplicates removed: {data['metadata']['duplicates_removed']}\")"
+          python -c "
+import json
+data = json.load(open('channels.json'))
+print(f\"  - Sports channels found: {data['metadata']['sports_channels_found']}\")
+print(f\"  - Playlists scanned: {data['metadata']['playlists_scanned']}\")
+print(f\"  - Total links collected: {data['metadata']['total_links_collected']}\")
+"
         else
           echo "file_exists=false" >> $GITHUB_OUTPUT
           echo "❌ channels.json was not created"
           exit 1
         fi
-    
+
     - name: Commit and push changes
       if: steps.check_file.outputs.file_exists == 'true'
       run: |
         git config --local user.email "github-actions[bot]@users.noreply.github.com"
         git config --local user.name "github-actions[bot]"
-        
+
         git add channels.json
-        
-        # Check if there are changes to commit
+
         if git diff --staged --quiet; then
           echo "No changes to commit"
         else
           git commit -m "Update sports channels database
-          
+
           - Scanned playlists from lovestory.json
           - Updated channels.json with latest sports channels
           - Automated scan via GitHub Actions"
-          
+
           git push
           echo "✅ Changes pushed to repository"
         fi
-    
+
     - name: Upload channels.json as artifact
       if: steps.check_file.outputs.file_exists == 'true'
       uses: actions/upload-artifact@v4
