--- a/aongewach/weekly_schedule_mapped.json
+++ b/aongewach/weekly_schedule_mapped.json
@@ -257,7 +257,7 @@
           ],
           "home_team": "Shabab Al Ahli",
           "away_team": "Al Hilal",
-          "home_team_id": null,
+          "home_team_id": 7389,
           "home_team_logo_id": null,
           "home_team_logo": null,
           "away_team_id": null,
@@ -319,8 +319,8 @@
           ],
           "home_team": "Atalanta",
           "away_team": "Cremonese",
-          "home_team_id": null,
-          "home_team_logo_id": null,
+          "home_team_id": 4311,
+          "home_team_logo_id": 4445,
           "home_team_logo": null,
           "away_team_id": null,
           "away_team_logo_id": null,
@@ -445,7 +445,7 @@
           "home_team_id": 4248,
           "home_team_logo_id": "4248",
           "home_team_logo": "https://cdn.jsdelivr.net/gh/drnewske/tyhdsjax-nfhbqsm@main/logos/italy/as roma.png",
-          "away_team_id": null,
+          "away_team_id": 4318,
           "away_team_logo_id": null,
           "away_team_logo": null
         },
@@ -475,10 +475,10 @@
           ],
           "home_team": "Villarreal",
           "away_team": "Espanyol",
-          "home_team_id": null,
+          "home_team_id": 6678,
           "home_team_logo_id": null,
           "home_team_logo": null,
-          "away_team_id": null,
+          "away_team_id": 6607,
           "away_team_logo_id": null,
           "away_team_logo": null
         },
@@ -2603,7 +2603,7 @@
           "home_team_id": null,
           "home_team_logo_id": null,
           "home_team_logo": null,
-          "away_team_id": null,
+          "away_team_id": 6113,
           "away_team_logo_id": null,
           "away_team_logo": null
         },
@@ -4986,7 +4986,7 @@
           ],
           "home_team": "Al Hilal",
           "away_team": "Al Ettifaq",
-          "home_team_id": null,
+          "home_team_id": 6105,
           "home_team_logo_id": null,
           "home_team_logo": null,
           "away_team_id": 6103,
