--- a/.github/workflows/update_schedule.yml
+++ b/.github/workflows/update_schedule.yml
@@ -36,7 +36,7 @@ jobs:
       run: |
         git config --global user.name 'GitHub Action'
         git config --global user.email 'action@github.com'
-        git add aongewach/weekly_schedule.json aongewach/weekly_schedule_mapped.json aongewach/weekly_schedule_final.json aongewach/channel_map.json aongewach/teams.json
+        git add aongewach/weekly_schedule.json aongewach/spdb_teams.json aongewach/weekly_schedule_mapped.json aongewach/weekly_schedule_final.json aongewach/channel_map.json aongewach/teams.json
         # Only commit if there are changes
         if git diff --staged --quiet; then
           echo "No changes to commit"
