--- a/aongewach/weekly_schedule_mapped.json
+++ b/aongewach/weekly_schedule_mapped.json
@@ -401,8 +401,8 @@
           "away_team": "Manchester City U18s",
           "home_team_id": 175702710,
           "home_team_logo": "https://r2.thesportsdb.com/images/media/team/badge/yvwvtu1448813215.png",
-          "away_team_id": null,
-          "away_team_logo": null
+          "away_team_id": 770049476,
+          "away_team_logo": "https://r2.thesportsdb.com/images/media/team/badge/vwpvry1467462651.png"
         },
         {
           "name": "Roma v Cagliari",
@@ -1805,8 +1805,8 @@
           "away_team": "SC Freiburg",
           "home_team_id": null,
           "home_team_logo": null,
-          "away_team_id": null,
-          "away_team_logo": null
+          "away_team_id": 234029879,
+          "away_team_logo": "https://r2.thesportsdb.com/images/media/team/badge/urwtup1473453288.png"
         },
         {
           "name": "Birmingham City v West Bromwich Albion",
@@ -2338,8 +2338,8 @@
           "away_team": "Al Nassr",
           "home_team_id": 174719660,
           "home_team_logo": "https://r2.thesportsdb.com/images/media/team/badge/vabwq61702481415.png",
-          "away_team_id": null,
-          "away_team_logo": null
+          "away_team_id": 145293922,
+          "away_team_logo": "https://r2.thesportsdb.com/images/media/team/badge/oy1zwv1753982526.png"
         },
         {
           "name": "2026 Winter Olympics Biathlon",
@@ -2835,8 +2835,8 @@
           ],
           "home_team": "Paris Women",
           "away_team": "Real Madrid Women",
-          "home_team_id": null,
-          "home_team_logo": null,
+          "home_team_id": 216203945,
+          "home_team_logo": "https://r2.thesportsdb.com/images/media/team/badge/yuvtsy1447594254.png",
           "away_team_id": 385549302,
           "away_team_logo": "https://r2.thesportsdb.com/images/media/team/badge/vwvwrw1473502969.png"
         },
@@ -5811,8 +5811,8 @@
           "away_team": "Canberra United Women",
           "home_team_id": 409207857,
           "home_team_logo": "https://r2.thesportsdb.com/images/media/team/badge/2c9k5p1679114095.png",
-          "away_team_id": null,
-          "away_team_logo": null
+          "away_team_id": 1427965902,
+          "away_team_logo": "https://r2.thesportsdb.com/images/media/team/badge/h64bw71704571124.png"
         },
         {
           "name": "Winter Olympics",
@@ -5936,10 +5936,10 @@
           ],
           "home_team": "Manchester City U18s",
           "away_team": "Manchester United U18s",
-          "home_team_id": null,
-          "home_team_logo": null,
-          "away_team_id": null,
-          "away_team_logo": null
+          "home_team_id": 770049476,
+          "home_team_logo": "https://r2.thesportsdb.com/images/media/team/badge/vwpvry1467462651.png",
+          "away_team_id": 988153492,
+          "away_team_logo": "https://r2.thesportsdb.com/images/media/team/badge/xzqdr11517660252.png"
         },
         {
           "name": "Freiburg Women v Union Berlin Women",
@@ -6117,8 +6117,8 @@
           ],
           "home_team": "Aston Villa U18s",
           "away_team": "Chelsea U18",
-          "home_team_id": null,
-          "home_team_logo": null,
+          "home_team_id": 410059806,
+          "home_team_logo": "https://r2.thesportsdb.com/images/media/team/badge/jykrpv1717309891.png",
           "away_team_id": 175702710,
           "away_team_logo": "https://r2.thesportsdb.com/images/media/team/badge/yvwvtu1448813215.png"
         },
@@ -6797,8 +6797,8 @@
           "away_team": "Al Nassr",
           "home_team_id": null,
           "home_team_logo": null,
-          "away_team_id": null,
-          "away_team_logo": null
+          "away_team_id": 145293922,
+          "away_team_logo": "https://r2.thesportsdb.com/images/media/team/badge/oy1zwv1753982526.png"
         },
         {
           "name": "VfB Stuttgart v Cologne",
@@ -8142,8 +8142,8 @@
           "away_team": "West Brom U21",
           "home_team_id": 304481213,
           "home_team_logo": "https://r2.thesportsdb.com/images/media/team/badge/kfaher1737969724.png",
-          "away_team_id": null,
-          "away_team_logo": null
+          "away_team_id": 533333036,
+          "away_team_logo": "https://r2.thesportsdb.com/images/media/team/badge/olp7va1598982016.png"
         },
         {
           "name": "Cremonese v Genoa",
