--- a/.github/workflows/fetch_teams.yml
+++ b/.github/workflows/fetch_teams.yml
@@ -1,22 +1,22 @@
-name: Fetch Teams DB
+name: Build Teams DB
 
 on:
   schedule:
-    - cron: '45 0 * * *' # Run at 00:45 UTC daily (after schedule scrape)
+    - cron: '0 3 * * 1' # Run weekly on Monday at 03:00 UTC (before schedule pipeline)
   workflow_dispatch:      # Allow manual trigger
 
 permissions:
   contents: write
 
 jobs:
-  fetch-teams:
+  build-teams:
     runs-on: ubuntu-latest
     
     steps:
     - uses: actions/checkout@v4
     
     - name: Set up Python
-      uses: actions/setup-python@v4
+      uses: actions/setup-python@v5
       with:
         python-version: '3.10'
         
@@ -25,14 +25,14 @@ jobs:
         python -m pip install --upgrade pip
         pip install requests
 
-    - name: Run Fetch Teams DB
+    - name: Build Teams Database (Bulk Preload)
       run: |
         cd aongewach
-        python -u fetch_teams_db.py
+        python -u build_teams_db.py
         
     - name: Commit and Push
       run: |
         git config --global user.name 'GitHub Action'
         git config --global user.email 'action@github.com'
         git add aongewach/spdb_teams.json
-        git diff --quiet && git diff --staged --quiet || (git commit -m "Update TheSportsDB Team Data" && git push)
+        git diff --quiet && git diff --staged --quiet || (git commit -m "Update TheSportsDB teams database (bulk)" && git push)
