--- a/.github/workflows/update_schedule.yml
+++ b/.github/workflows/update_schedule.yml
@@ -24,7 +24,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-        # Ensure beautifulsoup4 is installed (critical for scraper)
+        # Core deps: scraper + API client
         pip install beautifulsoup4 requests
         
     - name: Run Schedule Pipeline
@@ -36,7 +36,7 @@ jobs:
       run: |
         git config --global user.name 'GitHub Action'
         git config --global user.email 'action@github.com'
-        git add aongewach/weekly_schedule.json aongewach/spdb_teams.json aongewach/weekly_schedule_mapped.json aongewach/weekly_schedule_final.json aongewach/channel_map.json aongewach/teams.json
+        git add aongewach/weekly_schedule.json aongewach/spdb_teams.json aongewach/weekly_schedule_mapped.json aongewach/e104f869d64e3d41256d5398.json aongewach/channel_map.json
         # Only commit if there are changes
         if git diff --staged --quiet; then
           echo "No changes to commit"
