--- a/aongewach/.github/workflows/pipeline.yml
+++ b/aongewach/.github/workflows/pipeline.yml
@@ -25,6 +25,8 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+        sudo apt-get update
+        sudo apt-get install -y ffmpeg
 
     - name: Run Pipeline
       run: python run_pipeline.py
