--- a/.github/workflows/learn_mappings.yml
+++ b/.github/workflows/learn_mappings.yml
@@ -31,7 +31,7 @@ jobs:
       run: |
         git config --global user.name 'GitHub Action'
         git config --global user.email 'action@github.com'
-        git add aongewach/spdb_teams.json
+        git add spdb_teams.json
         # Only commit if there are changes
         if git diff --staged --quiet; then
           echo "No changes to commit"
