--- a/.github/workflows/scan_channels.yml
+++ b/.github/workflows/scan_channels.yml
@@ -17,13 +17,27 @@ jobs:
       uses: actions/setup-python@v5
       with:
         python-version: '3.10'
+
+    - name: Cache apt packages (ffmpeg)
+      uses: actions/cache@v4
+      with:
+        path: |
+          /var/cache/apt/archives
+          /var/lib/apt/lists
+        key: ${{ runner.os }}-apt-ffmpeg-v1
+        restore-keys: |
+          ${{ runner.os }}-apt-ffmpeg-
         
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-        sudo apt-get update
-        sudo apt-get install -y ffmpeg
+        if command -v ffmpeg >/dev/null 2>&1; then
+          echo "ffmpeg already available, skipping install."
+        else
+          sudo apt-get update
+          sudo apt-get install -y ffmpeg
+        fi
         
     - name: Run Sports Scanner
       run: |
