--- a/.github/workflows/stream_test.yml
+++ b/.github/workflows/stream_test.yml
@@ -1,42 +1,56 @@
-name: Scan Sports Channels
+name: Test And Prune Streams
 
 on:
   workflow_dispatch:
 
 jobs:
-  scan:
+  stream-test:
     runs-on: ubuntu-latest
     permissions:
       contents: write
-      
+
     steps:
     - name: Checkout repository
       uses: actions/checkout@v4
-      
+
     - name: Set up Python
       uses: actions/setup-python@v5
       with:
         python-version: '3.10'
-        
+
+    - name: Cache apt packages (ffmpeg)
+      uses: actions/cache@v4
+      with:
+        path: |
+          /var/cache/apt/archives
+          /var/lib/apt/lists
+        key: ${{ runner.os }}-apt-ffmpeg-v1
+        restore-keys: |
+          ${{ runner.os }}-apt-ffmpeg-
+
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-        
-    - name: Run Sports Scanner
+        if command -v ffmpeg >/dev/null 2>&1; then
+          echo "ffmpeg already available, skipping install."
+        else
+          sudo apt-get update
+          sudo apt-get install -y ffmpeg
+        fi
+
+    - name: Prune dead streams with ffprobe/ffmpeg
       run: |
-        # Run scanner with output file argument
-        python aongewach/scan_sports_channels.py aongewach/channels.json
-        
+        python aongewach/stream_tester.py aongewach/channels.json --workers 12 --timeout 8 --retry-failed 1
+
     - name: Commit and push changes
       run: |
         git config --global user.name 'GitHub Action'
         git config --global user.email 'action@github.com'
         git add aongewach/channels.json
-        # Only commit if there are changes
         if git diff --staged --quiet; then
           echo "No changes to commit"
         else
-          git commit -m "Update sports channels scan [skip ci]"
+          git commit -m "Prune dead streams [skip ci]"
           git push
         fi
