--- a/.github/workflows/scan_channels.yml
+++ b/.github/workflows/scan_channels.yml
@@ -22,11 +22,21 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+        if command -v ffprobe >/dev/null 2>&1; then
+          echo "ffprobe already available, skipping install."
+        else
+          sudo apt-get update
+          sudo apt-get install -y ffmpeg
+        fi
         
     - name: Run Sports Scanner
       run: |
         # Run scanner with output file argument
-        python aongewach/scan_sports_channels.py aongewach/channels.json
+        python aongewach/scan_sports_channels.py aongewach/channels.json \
+          --max-working-streams-per-channel 5 \
+          --test-workers 12 \
+          --test-timeout 8 \
+          --test-retry-failed 1
         
     - name: Commit and push changes
       run: |
