--- a/.github/workflows/update_schedule.yml
+++ b/.github/workflows/update_schedule.yml
@@ -26,6 +26,12 @@ jobs:
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
         # Core deps: scraper + API client
         pip install beautifulsoup4 requests
+        if command -v ffprobe >/dev/null 2>&1; then
+          echo "ffprobe already available, skipping install."
+        else
+          sudo apt-get update
+          sudo apt-get install -y ffmpeg
+        fi
         
     - name: Run Schedule Pipeline
       run: |
