--- a/.github/workflows/update_schedule.yml
+++ b/.github/workflows/update_schedule.yml
@@ -2,7 +2,7 @@ name: Update Weekly Schedule
 
 on:
   schedule:
-    - cron: '0 5 * * 1'  # Run every Monday at 05:00 UTC
+    - cron: '0 6 * * 1'  # Run every Monday at 06:00 UTC
   workflow_dispatch:
 
 jobs:
@@ -42,7 +42,7 @@ jobs:
       run: |
         git config --global user.name 'GitHub Action'
         git config --global user.email 'action@github.com'
-        git add aongewach/weekly_schedule.json aongewach/weekly_schedule_witm.json aongewach/weekly_schedule_mapped.json aongewach/e104f869d64e3d41256d5398.json aongewach/channel_map.json aongewach/channels.json
+        git add aongewach/weekly_schedule.json aongewach/weekly_schedule_mapped.json aongewach/e104f869d64e3d41256d5398.json aongewach/channel_map.json aongewach/channels.json
         # Only commit if there are changes
         if git diff --staged --quiet; then
           echo "No changes to commit"
