--- a/.github/workflows/update_schedule.yml
+++ b/.github/workflows/update_schedule.yml
@@ -37,12 +37,36 @@ jobs:
       run: |
         cd aongewach
         python run_pipeline.py
+
+    - name: Upload pipeline outputs artifact
+      if: always()
+      uses: actions/upload-artifact@v4
+      with:
+        name: update-schedule-outputs
+        path: |
+          aongewach/weekly_schedule.json
+          aongewach/e104f869d64e3d41256d5398.json
+          aongewach/channel_map.json
+          aongewach/channels.json
+        if-no-files-found: warn
         
     - name: Commit and push changes
       run: |
         git config --global user.name 'GitHub Action'
         git config --global user.email 'action@github.com'
-        git add aongewach/weekly_schedule.json aongewach/weekly_schedule_mapped.json aongewach/e104f869d64e3d41256d5398.json aongewach/channel_map.json aongewach/channels.json
+        FILES=(
+          "aongewach/weekly_schedule.json"
+          "aongewach/e104f869d64e3d41256d5398.json"
+          "aongewach/channel_map.json"
+          "aongewach/channels.json"
+        )
+        for f in "${FILES[@]}"; do
+          if [ -e "$f" ]; then
+            git add "$f"
+          else
+            echo "Skipping missing file: $f"
+          fi
+        done
         # Only commit if there are changes
         if git diff --staged --quiet; then
           echo "No changes to commit"
