--- a/.github/workflows/iblunder.yml
+++ b/.github/workflows/iblunder.yml
@@ -13,7 +13,7 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v4
         with:
-          fetch-depth: 1 # Only get the latest version (saves time/bandwidth)
+          fetch-depth: 0
 
       - name: Setup Python
         uses: actions/setup-python@v5
@@ -33,5 +33,31 @@ jobs:
         run: |
           git config --global user.name "Runner"
           git config --global user.email "bot@github.com"
+          BRANCH="${GITHUB_REF_NAME:-main}"
           git add lovestory.json log.txt
-          git diff --quiet && git diff --staged --quiet || (git commit -m "update - $(date +'%Y-%m-%d %H:%M:%S UTC')" && git push)
+          if git diff --staged --quiet; then
+            echo "No changes to commit"
+          else
+            git fetch origin "$BRANCH"
+            git rebase "origin/$BRANCH" || {
+              git rebase --abort || true
+              git pull --rebase origin "$BRANCH"
+            }
+            git commit -m "update - $(date +'%Y-%m-%d %H:%M:%S UTC')"
+            for attempt in 1 2 3; do
+              if git push origin "HEAD:$BRANCH"; then
+                echo "Push succeeded on attempt $attempt"
+                break
+              fi
+              if [ "$attempt" -eq 3 ]; then
+                echo "Push failed after 3 attempts"
+                exit 1
+              fi
+              echo "Push rejected, rebasing and retrying..."
+              git fetch origin "$BRANCH"
+              git rebase "origin/$BRANCH" || {
+                git rebase --abort || true
+                git pull --rebase origin "$BRANCH"
+              }
+            done
+          fi
