--- a/.github/workflows/iblunder.yml
+++ b/.github/workflows/iblunder.yml
@@ -7,15 +7,11 @@ on:
       validation_workers:
         description: Workers for existing playlist testing
         required: false
-        default: '5'
+        default: '10'
       discovery_workers:
         description: Workers for per-domain discovered link testing
         required: false
-        default: '5'
-      source_workers:
-        description: Workers for source scraping
-        required: false
-        default: '3'
+        default: '10'
 
 jobs:
   update-content:
@@ -41,21 +37,19 @@ jobs:
         
       - name: Run Scraper and Cleaner
         env:
-          VALIDATION_WORKERS: ${{ github.event.inputs.validation_workers || '5' }}
-          DISCOVERY_WORKERS: ${{ github.event.inputs.discovery_workers || '5' }}
-          SOURCE_WORKERS: ${{ github.event.inputs.source_workers || '3' }}
+          VALIDATION_WORKERS: ${{ github.event.inputs.validation_workers || '10' }}
+          DISCOVERY_WORKERS: ${{ github.event.inputs.discovery_workers || '10' }}
         run: |
           python bl34Gnderqqq123.py \
             --validation-workers "${VALIDATION_WORKERS}" \
-            --discovery-workers "${DISCOVERY_WORKERS}" \
-            --source-workers "${SOURCE_WORKERS}"
+            --discovery-workers "${DISCOVERY_WORKERS}"
         
       - name: Commit and Push Changes
         run: |
           git config --global user.name "Runner"
           git config --global user.email "bot@github.com"
           BRANCH="${GITHUB_REF_NAME:-main}"
-          git add lovestory.json log.txt
+          git add lovestory.json scraper_log.json
           if git diff --staged --quiet; then
             echo "No changes to commit"
           else
